# TerRust

./: Cargo.toml  README.md  session-handoff.md
benches/: ansi_parser.rs  terminal_grid.rs
plugins/git_helper/: Cargo.toml
plugins/git_helper/src/: lib.rs
proptest-regressions/terminal/: ansi.txt
src/: app.rs  cli.rs  lib.rs  main.rs  utils.rs
src/ai/: mod.rs  provider.rs
src/config/: keybindings.rs  mod.rs  theme.rs
src/history/: mod.rs
src/plugins/: mod.rs
src/terminal/: ansi.rs  buffer.rs  cell.rs  color.rs  config.rs  mod.rs  pty.rs
src/ui/: blocks.rs  components.rs  input.rs  mod.rs  render.rs  search.rs
tests/: test_ai.rs  test_config.rs  test_e2e.rs  test_plugin.rs  test_scrollback_interaction.rs  test_terminal.rs  test_ui.rs
tests/common/: mod.rs
